implement soft delete
